--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -3126,6 +3126,13 @@ Strictly return in JSON format:
 
 ### Image Editing
 
+#### `ENABLE_IMAGE_EDIT`
+
+- Type: `boolean`
+- Default: `true`
+- Description: When disabled, Image Editing will not be used and instead, images will be created only using the image generation engine.
+- Persistence: This environment variable is a `PersistentConfig` variable.
+
 #### `IMAGE_EDIT_ENGINE`
 
 - Type: `str`
