--- a/docs/features/web-search/perplexity_search.mdx
+++ b/docs/features/web-search/perplexity_search.mdx
@@ -24,3 +24,9 @@ Perplexity Search API is just a search engine, as opposed to the Perplexity inte
 3. Set `Web Search Engine` from dropdown menu to `perplexity_search`
 4. Enter your Perplexity API key from [Perplexity API Key management](https://www.perplexity.ai/account/api/keys).
 5. Press save
+
+:::tip
+
+LiteLLM's `/search` endpoint uses the Perplexity Search API style - you can customize the API endpoint of Open WebUI's perplexity_search web search to point to your LiteLLM instance and use that for web searches!
+
+:::
