--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -1196,13 +1196,13 @@ Read more about `offline mode` in the [offline mode guide](/tutorials/offline-mo
 
 #### `HF_HUB_OFFLINE`
 
-- Type: `bool`
-- Default: `False`
-- Description: Tells Hugging Face that we want to launch in offline mode, so to not connect to hugging face and prevent all automatic model downloads
+- Type: `int`
+- Default: `0`
+- Description: Tells Hugging Face whether we want to launch in offline mode, so to not connect to hugging face and prevent all automatic model downloads
 
 :::info
 
-Downloads of models, sentence transformers and other configurable items will NOT WORK when this is set to `True`.
+Downloads of models, sentence transformers and other configurable items will NOT WORK when this is set to `1`.
 RAG will also not work on a default installation, if this is set to `True`.
 
 :::
